--- a/src/components/SportsMart_Inovice/SM_Invoice.css
+++ b/src/components/SportsMart_Inovice/SM_Invoice.css
@@ -107,7 +107,7 @@
 .SM_servicei {
   position: absolute;
   font-size: 10.7px;
-  top: 21.1%;
+  top: 21.25%;
   right: 28.2%;
 }
 
@@ -120,10 +120,29 @@
 
 .SM_due {
   position: absolute;
-  font-size: 10.7px;
-  top: 22.8%;
-  right: 28.2%;
-  font-weight: 800;
+  top: 23.6%;
+  right: 1.2%;
+  height: 18px;
+  width: 200px;
+  background-color: white;
+}
+
+.SM_duem {
+  position: absolute;
+  top: 85.6%;
+  right: 0%;
+  height: 10px;
+  width: 10px;
+  background-color: white;
+}
+
+.SM_duem1 {
+  position: absolute;
+  top: 28.6%;
+  left: 2.98%;
+  height: 18px;
+  width: 3px;
+  background-color: rgb(236, 60, 57);
 }
 
 .SM_duej {
