--- a/src/components/EBS-INDIA/Genesis/Relievingletter/relie.css
+++ b/src/components/EBS-INDIA/Genesis/Relievingletter/relie.css
@@ -53,6 +53,14 @@
 
 .rel9 {
   position: absolute;
+  top: 46.3%;
+  left: 10%;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.rel9r{
+   position: absolute;
   top: 42.3%;
   left: 10%;
   font-weight: bold;
@@ -61,7 +69,7 @@
 
 .rel10 {
   position: absolute;
-  top: 57%;
+  top: 61%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -69,7 +77,7 @@
 
 .rel11 {
   position: absolute;
-  top: 59.5%;
+  top: 63.5%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -77,7 +85,7 @@
 
 .rel12 {
   position: absolute;
-  top: 62%;
+  top: 66%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -85,7 +93,7 @@
 
 .rel13 {
   position: absolute;
-  top: 64.5%;
+  top: 68.5%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -93,7 +101,7 @@
 
 .gestampsss {
   position: absolute;
-  top: 46.3%;
+  top: 50.3%;
   left: 9%;
   height: 130px;
 }
