--- a/src/components/EBS-INDIA/Geshurinfra/Experience/Experience.css
+++ b/src/components/EBS-INDIA/Geshurinfra/Experience/Experience.css
@@ -82,9 +82,17 @@
   text-justify: inter-word;
 }
 
+.expge9csr{
+ position: absolute;
+  top: 39.3%;
+  left: 10%;
+  font-weight: bold;
+  font-size: 14px;
+}
+
 .expge9cs {
   position: absolute;
-  top: 39.3%;
+  top: 43.3%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -92,7 +100,7 @@
 
 .expge10cs {
   position: absolute;
-  top: 55%;
+  top: 59%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -100,7 +108,7 @@
 
 .expge11cs {
   position: absolute;
-  top: 57.5%;
+  top: 61.5%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -108,7 +116,7 @@
 
 .expge12cs {
   position: absolute;
-  top: 60%;
+  top: 64%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -116,7 +124,7 @@
 
 .expge13cs {
   position: absolute;
-  top: 62.5%;
+  top: 66.5%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -124,7 +132,7 @@
 
 .gesstampss {
   position: absolute;
-  top: 45%;
+  top: 49%;
   left: 10%;
   height: 100px;
 }
