--- a/src/components/EBS-INDIA/JobwaysLLP/Relievingletter/relie.css
+++ b/src/components/EBS-INDIA/JobwaysLLP/Relievingletter/relie.css
@@ -49,7 +49,17 @@
 
 .rel6ea {
   position: absolute;
-  top: 34%;
+  top: 34.5%;
+  left: 10%;
+  font-size: 14px;
+  width: 638px;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.rel6ear{
+  position: absolute;
+  top: 39%;
   left: 10%;
   font-size: 14px;
   width: 638px;
@@ -59,7 +69,7 @@
 
 .rel9a {
   position: absolute;
-  top: 38%;
+  top: 43%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -67,7 +77,7 @@
 
 .rel10a {
   position: absolute;
-  top: 54%;
+  top: 59%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -75,7 +85,7 @@
 
 .rel11a {
   position: absolute;
-  top: 56.5%;
+  top: 61.5%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -83,7 +93,7 @@
 
 .rel12a {
   position: absolute;
-  top: 59%;
+  top: 64%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -91,7 +101,7 @@
 
 .rel13a {
   position: absolute;
-  top: 61.5%;
+  top: 66.5%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -121,7 +131,7 @@
 
 .jstampss {
   position: absolute;
-  top: 42%;
+  top: 47%;
   height: 130px;
   left: 12%;
 }
