--- a/src/components/EBS-INDIA/Sportsmart/Relievingletter/relie.css
+++ b/src/components/EBS-INDIA/Sportsmart/Relievingletter/relie.css
@@ -86,7 +86,7 @@
   text-justify: inter-word;
 }
 
-.rel9c {
+/* .rel9c {
   position: absolute;
   top: 48%;
   left: 10%;
@@ -131,4 +131,4 @@
   top: 15%;
   left: 43%;
   color: rgb(72, 147, 217);
-}
+} */
