--- a/src/components/EBS-USA/JobwaysLLC/box.css
+++ b/src/components/EBS-USA/JobwaysLLC/box.css
@@ -50,9 +50,19 @@
   line-height: 25px;
 }
 
+.er4emp{
+  position: absolute;
+  top: 41%;
+  left: 10%;
+  font-size: 15px;
+  width: 638px;
+  text-align: justify;
+  line-height: 25px;
+}
+
 .er5 {
   position: absolute;
-  top: 42%;
+  top: 47%;
   left: 10%;
   font-weight: bold;
   font-size: 15px;
@@ -60,7 +70,7 @@
 
 .er7 {
   position: absolute;
-  top: 55%;
+  top: 60%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -68,7 +78,7 @@
 
 .er8 {
   position: absolute;
-  top: 57%;
+  top: 62%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -76,7 +86,7 @@
 
 .er9 {
   position: absolute;
-  top: 59%;
+  top: 64%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
@@ -84,7 +94,7 @@
 
 .er10 {
   position: absolute;
-  top: 61%;
+  top: 66%;
   left: 10%;
   font-weight: bold;
   font-size: 14px;
