--- a/src/components/SportsMart_Inovice/SM_Invoice.css
+++ b/src/components/SportsMart_Inovice/SM_Invoice.css
@@ -233,6 +233,26 @@
     top: 49.7%;
 }
 
+.p6{
+  top: 51.7%;
+}
+
+.p7{
+  top: 53.7%;
+}
+
+.p8{
+  top: 55.7%;
+}
+
+.p9{
+  top: 57.7%;
+}
+
+.p10{
+  top: 59.7%;
+}
+
 .SM_hoursj {
   position: absolute;
   font-size: 10.7px;
