genielamp invoice added

--- a/src/components/CAREER-SERVICES/Invoice/Invoice.css
+++ b/src/components/CAREER-SERVICES/Invoice/Invoice.css
@@ -556,6 +556,14 @@
   font-weight: bolder;
 }
 
+.mac1-p2g{
+position: absolute;
+  font-size: 10.7px;
+  top: 77%;
+  left: 74.7%;
+  font-weight: bolder;
+}
+
 .tyf {
   position: absolute;
   font-size: 10.7px;
